--- a/public/src/components/Faq/Faq.css
+++ b/public/src/components/Faq/Faq.css
@@ -1,133 +1,174 @@
-.Faq{
-    margin: 2% 6% 0 6%;
-    border-radius: 2vw;
-    height: 75vh;
-    background-color: var(--bc_color);
+.Faq {
+  margin: 2% 6% 0 6%;
+  border-radius: 2vw;
+  height: 75vh;
+  background-color: var(--bc_color);
 }
 
-h1{
-    text-align: center;
-    margin: 4% 0 2% 0;
-    font-size: 5vh;
+h1 {
+  text-align: center;
+  margin: 4% 0 2% 0;
+  font-size: 5vh;
 }
 
-.qna{
-    display: flex;
-    align-items: center;
+.qna {
+  display: flex;
+  align-items: center;
 }
 
-.answers > p{
-    font-size: 1.7vh;
+.answers > p {
+  font-size: 1.7vh;
+  line-height: 2.5vh;
+  width: 30vw;
+}
+
+.questions {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  border: var(--light) solid 0.5vh;
+  border-radius: 5%;
+  padding: 2% 10% 2% 2%;
+}
+
+.question:hover {
+  color: var(--dark_text_color);
+}
+
+.answers {
+  width: 80%;
+  margin-left: 0;
+}
+
+.questions > p {
+  width: 15vw;
+  cursor: pointer;
+  font-size: 2.5vh;
+  line-height: 3vh;
+  padding: 3% 0 3% 0;
+  transform: none;
+}
+
+.label {
+  font-size: 2.5vh !important;
+  margin-bottom: 1.5vh;
+}
+
+.icons {
+  transform: translate(20%, -10%);
+  margin-left: 15vw;
+  display: flex;
+  gap: 40%;
+}
+
+.pingvin {
+  margin-top: 1vh;
+  width: 20%;
+  height: 40%;
+}
+
+.poti {
+  width: 20%;
+  height: 40%;
+}
+
+.answer {
+  transform: translateY(2%);
+}
+
+@media only screen and (max-width: 1300px) and (min-width: 901px) {
+  .Faq {
+    height: min-content;
+  }
+  .Faq > h1 {
+    margin-bottom: 6%;
+  }
+  .icons {
+    transform: translate(20%, 30%);
+  }
+  .questions > p {
+    font-size: 2.2vh;
     line-height: 2.5vh;
-    width: 30vw;
+    padding: 1vh 0 1vh 0;
+  }
+
+  .label {
+    font-size: 2.2vh !important;
+  }
+  .answers > p {
+    font-size: 1.9vh;
+    line-height: 2.2vh;
+    width: 100%;
+  }
 }
 
-.questions{
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-    border: var(--light) solid 0.5vh;
-    border-radius: 5%;
-    padding: 2% 10% 2% 2%;
-}
+@media only screen and (max-width: 900px) and (min-width: 481px) {
+  .Faq {
+    height: min-content;
+  }
+  .qna {
+    transform: translateY(5%);
+  }
 
-.answers{
-    width: 80%;
-    margin-left: 0;
-}
+  .questions > p {
+    font-size: 1.6vh;
+    line-height: 2vh;
+    padding: 1vh 0 0 0;
+  }
 
-.questions > p{
-    width: 15vw;
-    cursor: pointer;
+  .label {
+    font-size: 1.6vh !important;
+  }
+  .answers > p {
+    font-size: 1.45vh;
+    line-height: 2vh;
+    width: 100%;
+  }
+  .icons {
+    transform: translate(20%, 30%);
+  }
+  .questions {
+    width: 25%;
+    padding: 1% 10% 2% 2%;
+  }
+  .answers {
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 480px) and (min-width: 250px) {
+  .Faq {
+    height: min-content;
+  }
+  .qna {
+    transform: translateY(5%);
+  }
+
+  .Faq > h1 {
     font-size: 2.5vh;
-    line-height: 3vh;
-    padding: 3% 0 3% 0;
-    transform: none;
-}
+  }
 
-.label{
-    font-size: 2.5vh !important;
-    margin-bottom: 1.5vh;
-}
+  .questions > p {
+    font-size: 1vh;
+    line-height: 1.2vh;
+    padding: 1vh 0 0 0;
+  }
 
-.icons{
-    transform: translate(20%, -10%);
-    margin-left: 15vw;
-    display: flex;
-    gap: 40%;
-}
-
-.pingvin{
-    margin-top: 1vh;
-    width: 20%;
-    height: 40%;
-}
-
-.poti{
-    width: 20%;
-    height: 40%;
-}
-
-.answer{
-    transform: translateY(2%);
-}
-
-@media only screen and (max-width: 1300px) and (min-width: 901px){
-    .Faq{
-        height: min-content;
-    }
-    .Faq > h1{
-        margin-bottom: 6%;
-    }
-    .icons{
-        transform: translate(20%, 30%);
-    }
-    .questions > p{
-        font-size: 2.2vh;
-        line-height: 2.5vh;
-        padding: 1vh 0 1vh 0;
-    }
-    
-    .label{
-        font-size: 2.2vh !important;
-    }
-    .answers > p{
-        font-size: 1.9vh;
-        line-height: 2.2vh;
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 900px) and (min-width: 481px){
-    .Faq{
-        height: min-content;
-    }
-    .qna{
-        transform: translateY(5%);
-    }
-    
-    .questions > p{
-        font-size: 1.6vh;
-        line-height: 2vh;
-        padding: 1vh 0 0 0;
-    }
-    
-    .label{
-        font-size: 1.6vh !important;
-    }
-    .answers > p{
-        font-size: 1.45vh;
-        line-height: 2vh;
-        width: 100%;
-    }
-    .icons{
-        transform: translate(20%, 30%);
-    }
-    .questions{
-        width: 25%;
-        padding: 1% 10% 2% 2%;
-    }
-    .answers{
-        width: 75%;
-    }
+  .label {
+    font-size: 1vh !important;
+  }
+  .answers > p {
+    font-size: 0.8vh;
+    line-height: 1.2vh;
+    width: 100%;
+  }
+  .icons {
+    transform: translate(20%, 35%);
+  }
+  .questions {
+    width: 35%;
+    padding: 1% 10% 2% 2%;
+  }
+  .answers {
+    width: 75%;
+  }
 }
