--- a/public/src/index.css
+++ b/public/src/index.css
@@ -1,30 +1,30 @@
 @font-face {
-    font-family: HoneyblotCaps;
-    src: local("HoneyblotCaps"),
-        url('./assets/honeyblot_caps.ttf') format("truetype");
+  font-family: HoneyblotCaps;
+  src: local("HoneyblotCaps"),
+    url("./assets/honeyblot_caps.ttf") format("truetype");
 }
 
 * {
-    max-width: 100vw;
-    max-height: 100vh;
-    margin: 0 4% 0 4%;
-    padding: 0;
-    font-family: "HoneyblotCaps";
-    color: #dfdfdf;
+  max-width: 100vw;
+  max-height: 100vh;
+  margin: 0 4% 0 4%;
+  padding: 0;
+  font-family: "HoneyblotCaps";
+  color: #dfdfdf;
 }
 
-.black{
-    background-color: var(--dark);
+.black {
+  background-color: var(--dark);
 }
 
-.white{
-    background-color: var(--white);
+.white {
+  background-color: var(--white);
 }
 
 :root {
-    background-color: var(--light);
-    --bc_color: #144f5d;
-    --dark: #20262E;
-    --dark_text_color: #14171c;
-    --light: #dfdfdf;
+  background-color: var(--light);
+  --bc_color: #144f5d;
+  --dark: #20262e;
+  --dark_text_color: #14171c;
+  --light: #dfdfdf;
 }
